--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.3.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
     "prettier": "2.8.8"
-  }
+  },
+  "config": {}
 }
